# On-Chain-Token-Analytic

./: .gitignore  Cargo.toml  README.md
token_analytics_api/: Cargo.toml
token_analytics_api/src/: cache.rs  config.rs  main.rs
token_analytics_api/src/graphql/: cache.rs  mod.rs  schema.rs
token_analytics_api/src/graphql/resolvers/: ethereum.rs  mod.rs  solana.rs
token_analytics_api/src/models/: mod.rs
token_analytics_api/src/rpc/: erc20.abi.json  ethereum.rs  mod.rs  solana.rs
